<?xml version="1.0"?>
<package format="2">
  <name>timescaledb_ingestor</name>
  <version>0.0.1</version>
  <description>ROS node to ingest data into TimescaleDB</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license> <!-- e.g., BSD, MIT, Apache-2.0 -->

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend> <!-- Needed for finding libpqxx -->

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpqxx-dev</build_depend> <!-- System library build dependency -->
  <build_depend>nlohmann-json3-dev</build_depend> <!-- System library build dependency -->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libpqxx-dev</exec_depend> <!-- Runtime dependency (shared libs) -->
  <exec_depend>nlohmann-json3-dev</exec_depend> <!-- Runtime dependency (if not header only) -->

</package>